--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <nav class="Navbar">
                 <ul class="List">
                     <li class="Bar" id="Title">Library</li>
-                    <li class="Bar"><button>Admin</button></li>
+                    <li class="Bar"><button id="Admin">Admin</button></li>
                     <li class="Bar"><button>College</button></li>
                     <li class="Bar" id="Sign-in"><button>Sign-in</button></li>
                     <li class="Bar" id="Login"><button>Login</button></li>
