--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="login.css" > 
+    <link rel="stylesheet" type="text/css" href="style5.css" > 
 </head>
 <body>
     <div class="Box">
@@ -14,12 +14,12 @@
             
             <div class="input-box" id="email"><input type="email" id="email1"><label>Email</label></div>
             <div class="input-box" id="password"><input type="password" required  id="password1"> <label>Password</label></div>
-            <div class="input-box" id="btxn"><button class="btn1">Login</button> <button class="btn2">Sign Up</button>
+            <div class="input-box" id="btxn"><button class="btn1">Login</button> 
         </div>
     </div>
     </div>
     <script src="index5.js" >
-   
     </script>
+   
 </body>
 </html>
