--- a/mv.html
+++ b/mv.html
@@ -24,7 +24,7 @@
             </div>
             <div class="Books">
                 <div id="Head">
-                    Mostly Viewed
+                    Recently Added 
                 </div>
                 <div class="ProductCard">
 
