fonts and admin

--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="admin.css" > 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="Box">
@@ -13,14 +20,14 @@
           <div class="head"> <h1>Add Book</h1></div>
           <div class="input-box" id="Name"><input type="text" id="Name1"><label>Name of the Book</label></div>
             <div class="input-box" id="email"><input type="text" id="Email1"><label>Author</label></div>
-            <div class="input-box" id="Image"><input type="url" required id="Password1"> <label>Image</label></div>
-            <div class="input-box" id="Pdf"><input type="url" required id="Password1"> <label>Pdf</label></div>
-            <div class="input-box" id="password"><textarea rows="4" cols="5"required id="Password1"></textarea><label>Description</label></div>
+            <div class="input-box" id="Image"><input type="url" required id="Image1"> <label>Image</label></div>
+            <div class="input-box" id="Pdf"><input type="url" required id="Pdf1"> <label>Pdf</label></div>
+            <div class="input-box" id="descrip"><textarea rows="4" cols="5"required id="Description"></textarea><label>Description</label></div>
             <div class="input-box" id="btxn"><button class="btn">Register</button>
         </div>
     </div>
     </div>
-    <script src="index6.js" >
+    <script type="module" src="index6.js" >
   
     </script>
 </body>
