--- a/mv.html
+++ b/mv.html
@@ -5,7 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>2nd Page</title>
         <link rel="stylesheet" type="text/css" href="style2.css">
-
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
 
@@ -13,7 +18,6 @@
             <div class="Sidebar">
                 <p id="Dashboard">Dashboard</p>
                 <ul class="Item">
-                    <li class="items" id="REQ">Request Book</li>
                     <li class="items" id="YEAR1">1st Year &#11167</li>
                     <li class="items" id="YEAR2">2nd Year &#11167</li>
                     <li class="items" id="YEAR3">3rd Year &#11167</li>
